--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ Django==3.0.6
 django-ckeditor==5.9.0
 django-debug-toolbar==2.2
 django-js-asset==1.2.2
+gunicorn==20.0.4
 isort==4.3.21
 lazy-object-proxy==1.4.3
 mccabe==0.6.1
